<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_margin="6dp"
    android:elevation="3dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:weightSum="6"
    android:orientation="horizontal"
    android:id="@+id/llContent"
    >
    <ImageView
        android:id="@+id/imgBookImage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3.3">
    <TextView
        android:id="@+id/txtBookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:padding="3dp"
        />

        <TextView
            android:id="@+id/txtAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtBookName"
            android:padding="2dp"
            android:text="@string/name_of_the_author" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs_299"
            android:textColor="#FF0000"
            android:layout_below="@+id/txtAuthor"
            android:padding="2dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtRatings"
        android:layout_weight="1.2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4_5"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textColor="#ffca28"
        android:drawableStart="@drawable/ic_ratings"
        />

</LinearLayout>

</androidx.cardview.widget.CardView>


