<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.activity.DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:weightSum="6"
        android:orientation="horizontal"
        android:layout_below="@id/toolbar"
        android:padding="6dp"
        >
        <ImageView
            android:id="@+id/imgBookImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.3">
            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item"
                android:textSize="15sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:padding="3dp"
                />

            <TextView
                android:id="@+id/txtAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtBookName"
                android:padding="2dp"
                android:text="@string/name_of_the_author" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_299"
                android:textColor="#FF0000"
                android:layout_below="@+id/txtAuthor"
                android:padding="2dp"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtRatings"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textColor="#ffca28"
            android:drawableStart="@drawable/ic_ratings"
            />
    </LinearLayout>


<RelativeLayout
    android:id="@+id/scrollDes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/card"
    >
    <TextView

        android:id="@+id/abtBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_book"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/abtBook"
        android:layout_marginTop="2dp"
        android:layout_above="@id/btnAddFav"
        >

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/dummy_text"
            android:textSize="18sp" />
    </ScrollView>
    <Button
        android:id="@+id/btnAddFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/design_default_color_primary_dark"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:text="@string/add_to_favourites"
        android:textSize="20sp"
        android:textStyle="italic"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />

</RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        >
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>
